Go button now has contrast. Fixes #47

--- a/github-dark.css
+++ b/github-dark.css
@@ -83,7 +83,8 @@
  .topsearch span.search-input,p.meta,.js-menu-container,.sidebar .milestone,.commit-desc pre,.profilecols .filter-bar,
  .gist .button-group,div.content-header .search-form,#wrapper,.file-code,.gist-advanced-options .select-menu-button:after,
  #com .wikistyle, #com .wikistyle p,.css-truncate:hover .css-truncate-target,li.public,.action-bubble .bubble,.gravatar,
- .gravatar img,.facebox-popup,table.files,.branch-infobar,.tmp-reusable-bubble .bubble-inner,li.commit {
+ .gravatar img,.facebox-popup,table.files,.branch-infobar,.tmp-reusable-bubble .bubble-inner,li.commit,
+ .commit-group-item .authorship {
   background: transparent !important;
  }
 
@@ -200,7 +201,7 @@
  /* === #181818 === */
  /* needed background inbetween #111 and #222 :P */
  .counter,.social-count,.gc .diff-line-code,.commitinfo,.list-group-item.navigation-focus,.featured-commit-activity-graph,
- .featured-repo-logo {
+ .featured-repo-logo,.gobutton>.sha .octicon,.js-details-container.navigation-focus,.js-details-container.navigation-focus:nth-child(2n) {
   background-color: #181818 !important;
   border-color: #333 !important;
   border-width: 1px !important;
@@ -246,7 +247,7 @@
 
  /* Darkest background (#222), leave image, no border */
  .locales,.keyboard-shortcuts,li.contextswitch ul,.file,.add-bubble,#network .repo,.notification-settings,
- #files > .description,.commit-group-item:nth-child(2n) .authorship,.recent-gists .meta,.native-download,
+ #files > .description,.recent-gists .meta,.native-download,
  .native-download span,.fieldgroup .edit_hook .fields,.select-menu-filters,.mini-repo-list,.line-number,
  .dashboard-tabs,#wrapper {
   background-color: #222 !important;
@@ -282,7 +283,7 @@
  .blankslate,.boxed-group,.boxed-group-inner,.previewable-comment-form,.bubble,.bubble-contents,.blog-feedback p,
  div#common-issues h3,#commit-activity-master-head,#wiki-header > div,#wiki-footer > div,#wiki-rightbar,.capped-box h3,
  .auth-form-body,.range-editor-form,.action-indicator,.branch-link,ul.suggestions,.divider .blob-line-code .highlight,
- .branch-name,.pull-head,.pull-head .diffstat {
+ .branch-name,.pull-head,.pull-head .diffstat,.commit-group-item:nth-child(2n) {
   background-color: #333 !important;
   border: 0 !important;
   -webkit-border-radius: 3px !important;
@@ -295,9 +296,9 @@
  /* Panel background (#333), leave image, with border, no radius */
  .metabox .rule,.comment-form,#issues .labels,#gollum-editor select,.listings .odd,.feed,#files .description,#files .file,
  #message .envelope .header .info .title.unread,li.contextswitch ul li.current,ul.main_nav li.selected a,
- .watcher-widget,ul.states li,.add_file,.commit,.tree-browser,.line-comments,.inset,li.label,.filterbar,.divider-vertical,
+ .watcher-widget,ul.states li,.add_file,.tree-browser,.line-comments,.inset,li.label,.filterbar,.divider-vertical,
  #footer .upper_footer,.user-commits td,tr.inline-comments,.thread-subscription-status,.starting-comment .infobar,
- #issues_next .infobar,.discussion-bubble-inner,.commit-group-item .authorship,.formbody,.commandbar .display,.none p,
+ #issues_next .infobar,.discussion-bubble-inner,.formbody,.commandbar .display,.none p,
  .display div.choice,.display tr,div#common-issues ul li a:hover,#contributors h3,#contributors .cmeta,.select-menu-modal,
  .select-menu-modal > div,.issues-list>ul>li.selectable:hover,.issues-list>ul>li.navigation-focus,.issues-list-actions,
  pre div[style="background-color: rgb(255, 255, 204); "], /* <- space after "; " needed for Chrome */
@@ -311,7 +312,7 @@
  .pagehead ul.tabs li a:hover,.repos .bottom-bar,#languages .popular,.color-label-list a.selected,table.upgrades td,
  .commit-preview .message,.tip-box h4,.button-group,.wikistyle,.commit-preview p.error,.pagehead ul.tabs li.contextswitch,
  #browser tr th,.status-box h4,.line_numbers.comment-count,.line_numbers,.date_selector,.date_selector table th,
- #files span.icon,#issues_list .actions,.list-browser-footer,#repos .public,.inset-callout,#repo-message,
+ #files span.icon,#issues_list .actions,.list-browser-footer,#repos .public,.inset-callout,#repo-message,.commit,
  .summary-stats li a:hover {
   background: #333 none !important;
   color: #eee !important;
@@ -373,7 +374,7 @@
  #wiki-history .author img,.options-content h3,#issues-dashboard .actions,#readme .name,table.branches tr:hover td,
  .list-tip a:hover,.boxed-group-list > li:hover,.display div.choice:nth-child(2n+1),.display tr:nth-child(2n+1),
  .write-selected .write-tab,.preview-selected .preview-tab,#notification-center li.navigation-focus,.menu a:hover,
- .menu-container,.select-menu-tabs a.selected,.meta,.list-browser-item.navigation-focus,.commit-meta {
+ .menu-container,.select-menu-tabs a.selected,.meta,.list-browser-item.navigation-focus {
   background: #444 none !important;
   border-color: #555 !important;
   color: #eee !important;
@@ -598,7 +599,7 @@
  #statusbar,.clean,.clean td,.mergeable.clean,.octofication .message,#download_button,.status-box.good a,
  button.classy.primary,.progress-bar .progress,#message.good,.status-success,.mergeable,.new-issues,.new-pulls,.state-open,
  .state-indicator.proposed,.state-indicator.open,.state-indicator.reopened,.discussion-topic .branch-status.status-error,
- .discussion-topic .branch-status.status-failure,.release-downloads a.primary {
+ .discussion-topic .branch-status.status-failure,.release-downloads a.primary,.js-details-container.navigation-focus .gobutton {
   background: #305530 !important;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#373), to(#242)) !important;
   background-image: -webkit-linear-gradient(top, #373, #242) !important;
@@ -622,7 +623,7 @@
  .release-downloads a.primary:hover {
   background: #373 !important;
  }
- .open.mini-icon {
+ .open.mini-icon,.commit-group-item.navigation-focus .gobutton .octicon {
   color: #6cc644 !important;
  }
 
